k8s/sealed-secrets/cilium-network-policy-sealed-secrets.yaml
---
apiVersion: "cilium.io/v2"
kind: "CiliumNetworkPolicy"
metadata:
  name: "sealed-secrets"
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: "kube-system"
      app.kubernetes.io/name: "sealed-secrets"
  ingress:
    - fromEntities:
        - "kube-apiserver"
        - "host"
        - "remote-node"
      toPorts:
        - ports:
            - port: "8080"
              protocol: "TCP"
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: "kube-prometheus-stack"
            app.kubernetes.io/name: "prometheus"
      toPorts:
        - ports:
            - port: "8081"
              protocol: "TCP"
  egress:
    - toEntities:
        - "kube-apiserver"
        - "host"
      toPorts:
        - ports:
            - port: "6443"
              protocol: "TCP"
